argocd/overlays/production/argocd-notifications-timezone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  template:
    spec:
      containers:
        - command:
            - argocd-notifications
          name: argocd-notifications-controller
