argocd/overlays/production/nodeSelector.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: infra-node8
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-redis
  labels:
    app.kubernetes.io/name: argocd-redis
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: infra-node8
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-repo-server
  labels:
    app.kubernetes.io/name: argocd-repo-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: infra-node8
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: infra-node8
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: argocd-application-controller
  labels:
    app.kubernetes.io/name: argocd-application-controller
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: infra-node8
